lychee/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: lychee
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: lychee
    spec:
      containers:
      - name: lychee
        image: linuxserver/lychee
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: lychee
          mountPath: /config
          subPath: docker/lychee
        - name: lychee
          mountPath: /pictures
          subPath: Photo
      volumes:
      - name: lychee
        glusterfs:
          endpoints: glusterfs-cluster
          path: data
          readOnly: false
