lychee/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lychee
  labels:
    app: lychee
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: lychee
